# learn-io

./: .gitignore  README.md  TODO.md  alembic.ini  log.md  pyproject.toml
alembic/: env.py
alembic/versions/: a10dfa978f7d_add_language.py  edecba1a5afe_create_word_table.py  f690e349fa6a_add_translation.py  fd92222e9604_rewrite_from_scratch.py
src/: __init__.py  config.py  main.py
src/app/: Category.py  RandomWord.py
src/models/: Translation.py  Word.py  __init__.py
test/: test_random_words.py
