[tool.poetry]
name = "learn-io"
version = "0.0.1"
description = "my first project for 100 days of code challange"
authors = ["Denis Solovev <densol92@mail.ru>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
