[tool.poetry]
name = "learn-io"
version = "0.0.1"
description = "my first project for 100 days of code challange"
authors = ["Denis Solovev <densol92@mail.ru>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.7.5"
sqla-wrapper = "^5.1"
googletrans = "^3.0.0"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]
cookiecutter = "^1.7.3"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
hypothesis = "^6.25.0"
PyQt5-stubs = "^5.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
